--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leeroy",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://leeroy999.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
